@@ -1,0 +1,3 @@
+if mods["SchallCircuitGroup"] then
+  data.raw.item["spoilage-scanner"].subgroup = "circuit-input"
+end
