@@ -8,6 +8,7 @@
   "factorio_version": "2.0",
   "dependencies": [
     "base >= 2.0.0",
-    "spoilage-scanner >= 0.3.4"
+    "spoilage-scanner >= 0.3.4",
+    "? SchallCircuitGroup >= 2.0.0"
   ]
 }
